[package]
name = "romodoro"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["metarth"]
description = "A silly little pomodoro tool for studying"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
notify-rust = "4.0"
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.27"
ctrlc = "3.4"
